Fix all main section paddings issues on mobile screen

--- a/src/sass/components/_main.scss
+++ b/src/sass/components/_main.scss
@@ -35,7 +35,7 @@ main img {
     color: $black;
     
     margin-bottom: 1.5rem;
-    padding: 0 1rem;
+    padding: 0 1.5rem;
 }
 
 .main-text p {
@@ -90,6 +90,69 @@ main img {
         background: hsla(267, 54%, 71%, 1);
     }
 }
+
+// Media Queries 
+
+@media only screen and (min-width: 331px) {
+    .main-text h1 {
+        padding: 0 1.8rem;
+    }
+}
+
+@media only screen and (min-width: 340px) {
+    .main-text h1 {
+        padding: 0 1.5rem;
+    }
+}
+
+
+@media only screen and (min-width: 379px) {
+    .main-text h1 {
+        padding: 0 2.5rem;
+    }
+
+    .main-text p {
+        padding: 0 1.5rem;
+    }
+}
+
+@media only screen and (min-width: 414px) {
+    .main-text h1 {
+        padding: 0 3.5rem;
+    }
+
+    .main-text p {
+        padding: 0 2rem;
+    }
+}
+
+
+@media only screen and (min-width: 445px) {
+    .main-text h1 {
+        padding: 0 4.5rem;
+    }
+
+    .main-text p {
+        padding: 0 3.5rem;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 @media only screen and (min-width: 37.5rem) {
     .main-text {
